<?xml version="1.0" encoding="utf-8"?>

<!-- The coordinator layout code from from content_main.xml via
http://www.journaldev.com/10380/android-google-maps-in-action-example-tutorial -->
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="margi_tran.grabble.RegisterActivity">

    <!-- The following block of code is from
    https://developer.android.com/training/appbar/setting-up.html -->
    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="70dp"
        tools:context="margi_tran.grabble.RegisterActivity"
        android:orientation="vertical"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/registerMsgTextView"
            android:text="Please choose a username and password."
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/usernameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:layout_above="@+id/passwordField"
                android:layout_alignParentStart="true"
                android:layout_weight="1"
                android:hint="@string/username" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/passwordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:layout_below="@+id/input_layout_password"
                android:layout_alignParentStart="true"
                android:hint="@string/password" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/submitBtn"
            android:text="@string/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="processDetails"
            android:layout_marginTop="15dp" />

        <TextView
            android:id="@+id/registerErrMsgTextView"
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp" />

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
